blockml/test/valid/14_apply_filter/v38/v38m.model
model: v38m
sql_always_where: |
  {% apply_filter f1 %} target {% end_apply_filter %}
joins:
- from_view: v38_one
  as: a

fields:
- filter: f1
  result: number


